Fixed Scrollbar css property
::-webkit-scrollbar and associated styles for changing scrollbar style should be
outside pushbar css class.Also removed extra ampersand Symbol infront of each
-webkit- psudo selector.

--- a/pushbar/pushbar.css
+++ b/pushbar/pushbar.css
@@ -20,18 +20,18 @@ html.pushbar_locked{
 	transition:transform 0.5s ease;
 	will-change: transform;
 	background:#fff;
-  	&::-webkit-scrollbar {
-        width: 5px;
-    }
+}
+::-webkit-scrollbar {
+	width: 5px;
+}
 
-    &::-webkit-scrollbar-track {
-      background:rgba(0,0,0,0.1);
-    }
+::-webkit-scrollbar-track {
+	background:rgba(0,0,0,0.1);
+}
 
-    &::-webkit-scrollbar-thumb {
-      background:rgba(0,0,0,0.1);
-      border-radius:100px;
-    }
+::-webkit-scrollbar-thumb {
+	background:rgba(0,0,0,0.1);
+	border-radius:100px;
 }
 .pushbar_overlay{
 	z-index: -999;
